# raytracer

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile
include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
source/: main.cpp
